Fixed profile pic overflow problem in course page

--- a/public/stylesheets/course.css
+++ b/public/stylesheets/course.css
@@ -23,6 +23,8 @@
 .faces {
     margin-top: 40px;
     margin-left: 5px;
+    height: 60px;
+    overflow: hidden;
 }
 
 .face {
